--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test-auth": "mocha ./src/tests/auth.test.js --timeout 2000",
-    "test-items": "mocha ./src/tests/items.test.js --timeout 2000"  
+    "test-items": "mocha ./src/tests/items.test.js --timeout 2000",
+    "test-orders": "mocha ./src/tests/orders.test.js --timeout 2000"
   },
   "keywords": [],
   "author": "",
